--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   author: thepax
+  role_name: elrepo
   description: RHEL/CentOS - ELRepo Project
   license: GPL
   min_ansible_version: 2.0
